Fix main menu contrast

--- a/docs/content/assets/extra.css
+++ b/docs/content/assets/extra.css
@@ -45,6 +45,41 @@ dt {
     max-width: 130ch;
 }
 
+/* main menu */
+.md-container > nav .md-tabs__item {
+    position: relative !important;
+    height: 2rem;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.md-container > nav .md-tabs__link {
+    margin-top: 0;
+}
+
+.md-container > nav .md-tabs__link:after {
+    content: '';
+    background: #fff;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    top: 0;
+}
+
+.md-container > nav .md-tabs__link:hover:after,
+.md-container > nav .md-tabs__link--active:after {
+    opacity: 0.1;
+}
+
+.md-tabs[hidden] .md-tabs__link,
+.md-container > nav .md-tabs[hidden] .md-tabs__link {
+    transform: unset;
+    transition: opacity .3s ease;
+}
+
 /* blockquote */
 [dir=ltr] .md-typeset blockquote {
     border-left-color: var(--md-primary-fg-color);
